# Aquarius-cxx

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  report_cov.sh
.github/workflows/: ccpp.yml
example/json/: CMakeLists.txt  bench.ds  main.cpp  run_bench.ds  simple_json_parser.hpp
example/json2/: CMakeLists.txt  json.hpp  json_parser.hpp  main.cpp  run_bench.ds
example/json3/: CMakeLists.txt  json.hpp  json_parser.hpp  main.cpp
include/: aquarius.hpp
include/internal/: ascii.hpp  combinator.hpp  expression.hpp  mapper.hpp  misc.hpp  parser.hpp  predefined.hpp  state.hpp  tuples.hpp  unicode.hpp
test/: CMakeLists.txt
test/ascii/: CMakeLists.txt  ascii_test.cpp
test/base/: CMakeLists.txt  base_test.cpp  main.cpp
test/tuple/: CMakeLists.txt  tuple_test.cpp
test/type/: CMakeLists.txt  type_test.cpp
